docs: update reference/configuration.md with 1M cases config (Agent 3 partial)
https://claude.ai/code/session_01CT5f3ygFn9uwCtrxSK82E4